--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-simple-repository</title>
+    <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
-    
+  <div>
+    <h2>My first website</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci beatae iure quia. Magnam numquam voluptates esse, vel dolore distinctio magni vitae. Facilis placeat earum corporis illo molestias ipsa perspiciatis debitis!</p>
+
+
+
+  </div>  
 </body>
 </html>
