my second and the third blogs

--- a/index.html
+++ b/index.html
@@ -14,5 +14,43 @@
 
 
   </div>  
+  <div>
+    <h2>My second website</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci beatae iure quia. Magnam numquam voluptates esse, vel dolore distinctio magni vitae. Facilis placeat earum corporis illo molestias ipsa perspiciatis debitis!</p>
+
+
+
+  </div>  
+  <div>
+    <h2>My third website</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci beatae iure quia. Magnam numquam voluptates esse, vel dolore distinctio magni vitae. Facilis placeat earum corporis illo molestias ipsa perspiciatis debitis!</p>
+
+
+
+  </div>  
+
+  <div>
+    <h2>My fourth website</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci beatae iure quia. Magnam numquam voluptates esse, vel dolore distinctio magni vitae. Facilis placeat earum corporis illo molestias ipsa perspiciatis debitis!</p>
+
+
+
+  </div>  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
