--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 
   </div>  
 
+ <div>
+  <h3>My website list</h3>
+  <ul>
+    <li>my first website</li>
+    <li>my second website</li>
+    <li>and my third website</li>
+  </ul>
+
+
+ </div> 
 
 
 
