added the image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-simple-repository</title>
     <link rel="stylesheet" href="styles/blogs.css">
+    
 </head>
 <body>
   <div>
@@ -47,6 +48,14 @@
 
 
  </div> 
+
+ <div>
+
+  <h2>aj amer mon valo ney</h2>
+  <img class="
+  img-man" src="image/man.jpg" alt="">
+  
+ </div>
 
 
 
